--- a/exampleSite/content/results/cancer/mci_cancer_prelim.Rmd
+++ b/exampleSite/content/results/cancer/mci_cancer_prelim.Rmd
@@ -24,203 +24,88 @@ output:
 
 # Stable Balancing Weighting
 
-What is the relationship between charges and age? This plot shows some initial trends:
+- We focus on two different divisions: 
+  
+  (i) MCI vs MCI + Cancer, and
+  
+  (ii) MCI vs MCI + Cancer (before) vs MCI + Cancer (after)
+  
+  
+- This means that the baseline or control group will be the **MCI group**.
 
-```{r echo = FALSE}
+
+---
+
+- All groups are **unbalanced** a priori:
+
+```{r echo = FALSE, message=FALSE}
 library(htmltools)
 library(paletteer)
 library(reactable)
 library(tidyverse)
 
-ggplot(data = insurance, 
-       aes(x = age, y = charges)) +
-  geom_point(color = "dark orange", fill = alpha("dark orange", 0.5), size = 3, pch = 21) +
-  theme_bw()
+tab1 <- read.csv("https://raw.githubusercontent.com/maibennett/website_github/master/exampleSite/content/results/cancer/balance_cancer.csv")
+tab2 <- read.csv("https://raw.githubusercontent.com/maibennett/website_github/master/exampleSite/content/results/cancer/balance.csv")
+
+rownames(tab1) <- c("69-71 years","72-75 years","76-79 years","80 years or older","Female", "High school","Some college",
+                              "College","Post-college")
+rownames(tab2) <- c("69-71 years","72-75 years","76-79 years","80 years or older","Female", "High school","Some college",
+                              "College","Post-college")
+
+
+before <- cbind(tab1$Cancer...MCI...Before, tab2$Cancer.Before...MCI, tab2$Cancer.After...MCI, tab1$MCI)
+
+colnames(before) <- c("MCI + Cancer (All)", "MCI + Cancer (Before Diag.)", "MCI + Cancer (After Diag.)", "MCI")
+
+before %>%
+  reactable(
+      # ALL one page (no scrolling or page swapping)
+    pagination = TRUE,
+    # compact for an overall smaller table width wise
+    compact = FALSE,
+    # borderless - TRUE or FALSE
+    borderless = FALSE,
+    # Stripes - TRUE or FALSE
+    striped = FALSE,
+    # fullWidth - either fit to width or not
+    fullWidth = TRUE,
+    # apply defaults
+    # 100 px and align to center of column
+    defaultColDef = colDef(
+      align = "center")
+  )
+  
+```
+- After re-weighting using SBW, **groups are now balanced with respect to the MCI group**:
+
+```{r echo = FALSE, message=FALSE}
+after <- cbind(tab1$Cancer...MCI...After, tab2$Cancer.Before...MCI.1, tab2$Cancer.After...MCI.1, tab1$MCI)
+
+colnames(after) <- c("MCI + Cancer (All)", "MCI + Cancer (Before Diag.)", "MCI + Cancer (After Diag.)", "MCI")
+
+after %>%
+  reactable(
+      # ALL one page (no scrolling or page swapping)
+    pagination = TRUE,
+    # compact for an overall smaller table width wise
+    compact = FALSE,
+    # borderless - TRUE or FALSE
+    borderless = FALSE,
+    # Stripes - TRUE or FALSE
+    striped = FALSE,
+    # fullWidth - either fit to width or not
+    fullWidth = TRUE,
+    # apply defaults
+    # 100 px and align to center of column
+    defaultColDef = colDef(
+      align = "center")
+  )
   
 ```
 
-
-### Question 1.1: 
-**Describe the relationship between age and charges based on the previous plot.**
-
-### Question 1.2: 
-**Make a new plot that colors these points by whether a person is a smoker or not. What can you tell about the relationship between age and charges?**
-
-### Question 1.3: 
-**Now, show a new plot with the relationship between BMI and charges. What can you say about that relationship? Does the relationship look linear?**
-
----
-
-## Let's build some models
-
-### Question 1.4: 
-**Using the previous information, build a regression using age, body mass index, smoker category, and sex as covariates, and charges as the dependent variable. Use any variable transformation that you believe appropriate (and justify it). Interpret the coefficients for this model.**
-
-
-
-Finally, let's add region to the previous regression. 
-
-### Question 1.5: 
-**If we wanted to predict an individual's insurance charges, which model do you think would be better and why? Show your results.** 
-
-
----
-
-# Task 2: Models with binary outcomes
-
-```{r setup2, warning=FALSE, message=FALSE}
-library(estimatr)
-
-nba <- read.csv("https://raw.githubusercontent.com/maibennett/sta235/main/exampleSite/content/Assignments/Homework1/data/nba.csv")
-```
-
-In this section, we will work with NBA data analyzing different players' statistics as rookies and whether they are still in the NBA 5 years later. The dataset has the following variables:
-
-- `name`: Player's name.
-- `GP`: Games played.
-- `MIN`: Minutes played.
-- `PTS`: Points per game. 
-- `FGM`: Field goals made.
-- `FGA`: Field goals attempts.
-- `FGP`: Field goals percentage.
-- `X3PM`: 3 points made.
-- `X3PA`: 3 points attempts.
-- `X3PP`: 3 points percentage.
-- `FTM`: Free throw made.
-- `FTA`: Free throw attempts.
-- `FTP`: Free throw percentage.
-- `OREB`: Offensive rebounds.
-- `DREB`: Defensive rebounds.
-- `REB`: Rebounds.
-- `AST`: Assists.
-- `STL`: Steals.
-- `BLK`: Blocks.
-- `TOV`: Turnovers.
-- `TARGET_5Yrs`: Career length in NBA $\geq$ 5 years (1) or $<$ 5 years (0).
-
----
-
-## Fitting some models
-
-The following linear probability model regresses some rookie stats (games played, average points per game, 3-point percentage, rebounds, and assists) on whether a player is still on the NBA five years later.   
-
-### Question 2.1: 
-**Interpret the coefficient for games played and 3-point percentage in this setting (SE are in parenthesis)**
-
-```{r, echo=FALSE}
-lm2.1 <- estimatr::lm_robust(TARGET_5Yrs ~ GP + PTS + X3PP + REB + AST, data = nba)
-
-modelsummary(list(Target_5Yrs = lm2.1), stars = TRUE, gof_omit = 'DF|AIC|BIC|Log.Lik.|F')
-```
-
-
-Now, fit the same model using a logistic regression.
-
-### Question 2.2: 
-**Interpret the same coefficients for this model (games played and 3-point percentage) in your logistic regression. How do they compare to the linear probability model?**
-
-
----
-
-## Predictions
-
-Now imagine you want to make a prediction for two rookies in particular: Smith Roberts and Tyler Stevens. Their stats are given here:
-
-```{r warning=FALSE, message=FALSE}
-
-rookies <- data.frame(Name = c("Smith Roberts","Tyler Stevens"),
-                      GP = c(91,15),
-                      PTS = c(28,42),
-                      X3PP = c(66.1,75.5),
-                      REB = c(2,5.1),
-                      AST = c(1.5,2))
-
-```
-
-### Question 2.3: 
-**Compare the predictions given by the Linear Probability Model and the Logistic Regression. Which model would you use and why?**
-
-
----
-
-# Task 3: Introduction to Causal Inference
-
-Let's go back to the insurance data. Imagine that you now have also data for people that are uninsured:
-
-```{r, echo=TRUE}
-# Load all insurance data
-insurance_all <- read.csv("https://raw.githubusercontent.com/maibennett/sta235/main/exampleSite/content/Assignments/Homework1/data/insurance_all.csv")
-
-```
-
-### Question 3.1: 
-**What is the relationship between being insured and BMI? and what about smoking? Draw some figures and fit some simple models! Comment on your results.**
-
-
----
-
-We are interested in a problem called "Moral Hazard", which refers to the idea that people tend to take more risks after they get insurance compared to those that are uninsured or even compared to their previous behavior (e.g. drive faster, take worse care of their health, etc.). A colleague says that they know how to identify it, and shows you the following results:
-
-```{r, echo=FALSE}
-lm3.1 <- lm(bmi ~ insured + factor(smoker) + age + factor(sex) + factor(region), data = insurance_all)
-
-modelsummary(list(BMI = lm3.1), stars = TRUE, gof_omit = 'DF|AIC|BIC|Log.Lik.|F')
-```
-
-### Question 3.2: 
-**Why is the coefficient on `insured` different in the simple regression model than in your colleagues model? Explain.**
-
-
-### Question 3.3: 
-**Can we identify the effect of being insured on BMI with your colleagues' model? Why or why not? Can you see a potential collider problem?**
-
-
----
-
-## Design your own study:
-
-Imagine now that you've been hired by an insurance company to identify the causal effect of being insured on BMI, so they can assess potential "Moral Hazard".
-
-### Question 3.4: 
-**If you wanted to identify the causal effect of being insured on BMI, how would you do it? Would you need additional data? Give the details of your study design.**
-
-# Task 4: Let's bring everything together
-
-[Banerjee, Chandrasekhar, Duflo, and Jackson (2013)](https://web.stanford.edu/~jacksonm/Banerjee-Chandrasekhar-Duflo-Jackson-DiffusionOfMicrofinance-Science-2013.pdf) wanted to measure how centrality within a network (e.g. how "well-connected" people are) affected the diffusion of information related to a micro-finance intervention (a loan) in India. The idea of this study was to inform influential people in each village about the availability of a loan, and analyze the diffusion of that information relative to network connections. The authors collected data in several villages in India related to connectivity of each household in the following *simplified* dataset:
-
-```{r setup4, warning=FALSE, message=FALSE}
-## data on 8622 households
-hh <- read.csv("https://raw.githubusercontent.com/maibennett/sta235/main/exampleSite/content/Assignments/Homework1/data/microfi_edit.csv")
-```
-
-Where we have the following variables:
-
-- `loan`: Whether the household took out the loan or not.
-- `village`: Village ID (38 in total).
-- `religion`: Religion within the household.
-- `roof`: Roof material.
-- `rooms`: Number of rooms in the house.
-- `beds`: Number of beds in the house.
-- `electricity`: Whether the house has electricity or not.
-- `ownership`: Ownership status of the house the residents live in.
-- `leader`: Whether an identified village leader belong to the household or not.
-- `degree_z`: Measure of centrality or connectiveness of the household.
-
-### Question 4.1:
-**Write down the potential outcome model for estimating the effect of connectiveness on whether a household took out a loan or not.**. *Note: You don't need data for this!*
-
-### Question 4.2: 
-**What model would you fit to estimate the effect of centrality on whether a household took out a loan or not using this data? Estimate it!**
-
-### Question 4.3: 
-**Interpret the coefficient of `degree_z` on `loan`**
-
-### Question 4.4: 
-**Is the previous effect causal? Why or why not? Write down your assumptions.**
-
-### Questions 4.5:
-**Write down at least two potential threats to causality in this context.**
-
-
-
-<!-- pagedown::chrome_print('C:/Users/mc72574/Dropbox/UT/Teaching/Assignments/Homework1/STA235_Homework1.html') -->
+# Preliminary Results
+
+<div style="width:1770px">
+  <svg width="880" height="160" id="mocat_cancer"></svg>
+  <svg width="880" height="160" id="mocamis_cancer">></svg>
+</div>
