--- a/exampleSite/content/results/cancer/mci_cancer_prelim.Rmd
+++ b/exampleSite/content/results/cancer/mci_cancer_prelim.Rmd
@@ -13,6 +13,13 @@ output:
     css: "style.css"
     toc: no
 ---
+<style type="text/css">
+.main-container {
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 
 # Introduction
 
