--- a/exampleSite/content/files/Rmarkdown_template_HTML.Rmd
+++ b/exampleSite/content/files/Rmarkdown_template_HTML.Rmd
@@ -6,41 +6,42 @@ author:
   - Chi Chi Devayne
 date: "August 16th, 2021"
 output: 
-  pdf_document: 
-    latex_engine: xelatex  # More modern PDF typesetting engine
-    fig_width: 5
-    fig_height: 4
-    fig_caption: true # If you want to include captions for your figures (usually you do)
-    toc: no #Do you want a Table of Contents?
-header-includes:
-   - \usepackage{float} #This is just a useful LaTeX package for positioning tables and figures
-urlcolor: blue #This is so links are highlighted (and more visible)
+  html_document:
+    css: style.css 
+    toc: no
+    fig.caption: true
+paged-footnotes: true #So that they are not included as endnotes
 ---
-
 
 <!-- Usually, you should load all your packages at the beginning. If you don't have a package installed, you'll need to do that first! -->
 ```{r setup, warning=FALSE, message=FALSE, echo=FALSE}
+library(emo)
 library(stargazer)
 library(tidyverse)
 library(ggplot2)
-
-knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # RMarkdown is awesome
 
-It make take a bit more time, but the flexibility that Rmarkdown gives you (and the aesthetics **\*chef's kiss\***) is unbeatable. This file is meant to act as a template and it includes some basic comments (both here and in the accompanying .css file, if you want to go to the HTML dark side), so it can be easily customized. 
+It make take a bit more time, but the flexibility that Rmarkdown gives you (and the aesthetics `r emo::ji("heart_eyes")`) is unbeatable^[If you want to learn how to use emojis on your Rmarkdown files, go to https://github.com/hadley/emo]. This file is meant to act as a template and it includes some basic comments (both here and in the accompanying .css file, if you want to go to the HTML dark side), so it can be easily customized. 
 
 Don't despair! You might start like this:
 
+<center>
 ![Dog is knitting angrily](./Rmarkdown/images/knits2.png){width=3in}
+</center>
 
 
 But you will end up like this^[Note how we are changing the size of these figures (you can use different measures!)]:
 
+<center>
 ![Cool beans!](./Rmarkdown/images/cool_beans.jpeg){width=40%}
+</center>
+
 
 You can see the knitted version (PDF) of this file [here](https://www.magdalenabennett.com/files/Rmarkdown_template.pdf)
+
+--- 
 
 # Let's see some examples
 
@@ -61,7 +62,6 @@ y_i =& \beta_0 + \beta_1 x_{i1} + \beta_2 x_{i2} + \beta_3 x_{i3} +\\
 
 (Note: Notice that the `&` sign denotes how the lines should be aligned).
 
----
 
 ## Let's code
 
@@ -74,8 +74,10 @@ lm(speed ~ dist, data = cars)
 
 ```
 
+
 Meh, but that output looks ugly. Can we make it prettier? Let's try `stargazer` (you will need to include the `results='asis'` argument).
 
+<center>
 ```{r stargazer-one-model, echo = FALSE, message=FALSE, warning=FALSE, results='asis', align='center'}
 data(cars)
 
@@ -84,103 +86,99 @@ lm1 <- lm(speed ~ dist, data = cars)
 # You need to include "header = FALSE" to avoid an ugly output message.
 # table.placement = "H" indicates that the table should be positions exactly were you put it in your document
 stargazer(lm1,  title = "Regression of Speed on Distance", column.labels = c("Model 1"), header=FALSE,
-          dep.var.caption = "Dependent Variable: Speed", dep.var.labels = "", table.placement = "H") 
+          dep.var.caption = "Dependent Variable: Speed", dep.var.labels = "", type = "html", notes.append = FALSE,
+          notes = c("<sup>&sstarf;</sup>p<0.1; <sup>&sstarf;&sstarf;</sup>p<0.05; <sup>&sstarf;&sstarf;&sstarf;</sup>p<0.01")) 
 
 ```
+</center>
+
 
 You can also compare more than one model:
 
-```{r stargazer-two-models, echo = FALSE, message=FALSE, warning=FALSE, results='asis', align='center'}
+<center>
+```{r stargazer-two-models, echo = FALSE, message=FALSE, warning=FALSE, results='asis', fig.align='center'}
 
 lm2 <- lm(speed ~ dist + I(dist^2), data = cars)
 
 # You need to include "header = FALSE" to avoid an ugly output message.
 stargazer(lm1, lm2,  title = "Two Regressions of Speed on Distance", column.labels = c("Model 1", "Model 2"), header=FALSE,
           dep.var.caption = "Dependent Variable: Speed", dep.var.labels = "",
-          covariate.labels = c("distance","distance$^2$", "Constant"), table.placement = "H") 
+          covariate.labels = c("distance","distance<sup>2</sup>", "Constant"), type = "html", notes.append = FALSE,
+          notes = c("<sup>&sstarf;</sup>p<0.1; <sup>&sstarf;&sstarf;</sup>p<0.05; <sup>&sstarf;&sstarf;&sstarf;</sup>p<0.01")) 
 
 ```
+</center>
 
 ---
 
 # Let's plot
 
-Finally, let's briefly look into plots. Play around with this syntax to customize it however you want!
+Finally, let's briefly look into plots. For this, I'm using the package `hrbrthemes`. Check it out [here!](https://github.com/hrbrmstr/hrbrthemes).
 
+I'm also saving these as .svg for resolution purposes.
 
-```{r speed1, out.width='70%', fig.align='center', fig.cap='This is my first plot', echo=FALSE, message=FALSE, fig.pos="H"}
-ggplot(data = cars, aes(x = dist, y = speed)) +
-  geom_point(pch = 21, fill="light grey", color = "white", size = 5) +
-  geom_smooth(aes(color = "#BF3984"), method="lm", se = TRUE, fill="#BF3984", lwd=2) + #I'm customizing colors, but you can also use something like "red" or "blue"
-  scale_color_manual(values = c("#BF3984"), labels = "Linear fit") +
-  xlab("Distance") + ylab("Speed") + ggtitle("Need for speed")+
-  theme_bw() +
-  theme(plot.margin=unit(c(1,1,1.5,1.2),"cm"),
-      panel.grid.major.x = element_blank(), #Eliminate grid (comment these out if you want a grid)
-      panel.grid.minor.x = element_blank(),
-      panel.grid.major.y = element_blank(),
-      panel.grid.minor.y = element_blank(),
-      axis.line = element_line(colour = "dark grey"))+
-  theme(axis.title.x = element_text(size=11),
-      axis.text.x = element_blank(),
-      axis.title.y = element_text(size=11),
-      axis.text.y = element_blank(),legend.position=c(0.8,0.1),
-      legend.title = element_blank(),
-      legend.text = element_text(size=10),
-      legend.background = element_rect(fill=NULL,colour ="white"),
-      title = element_text(size=12))
+```{r example, fig.height=6, fig.width=6, fig.align='center', dev='svg', echo=FALSE, warning=FALSE, message = FALSE}
+library(hrbrthemes)
 
-```
-
-... and for Andrew Baker's sake, we can also rotate the y-axis label (remember to rename your code chunk!)
-
-```{r speed2, fig.dim=c(4.5,3.5), fig.align='center', fig.cap='This is my second plot', echo=FALSE, message=FALSE, fig.pos="H"}
 ggplot(data = cars, aes(x = dist, y = speed)) +
   geom_point(pch = 21, fill="light grey", color = "white", size = 5) +
   geom_smooth(aes(color = "#BF3984"), method="lm", se = TRUE, fill="#BF3984", lwd=2) +
   scale_color_manual(values = c("#BF3984"), labels = "Linear fit") +
   xlab("Distance") + ylab("Speed") + ggtitle("Need for speed")+
-  theme_bw() +
+  #theme_bw() +
+  theme_ipsum_rc() + #comment this out if you don't have `hrbrthemes` installed
   theme(plot.margin=unit(c(1,1,1.5,1.2),"cm"),
       panel.grid.major.x = element_blank(), #Eliminate grid (comment these out if you want a grid)
       panel.grid.minor.x = element_blank(),
       panel.grid.major.y = element_blank(),
       panel.grid.minor.y = element_blank(),
       axis.line = element_line(colour = "dark grey"))+
-  theme(axis.title.x = element_text(size=11),
+  theme(axis.title.x = element_text(size=16),
       axis.text.x = element_blank(),
-      axis.title.y = element_text(size=11, angle=0), #You can rotate the title with angle
+      axis.title.y = element_text(size=16),
       axis.text.y = element_blank(),legend.position=c(0.8,0.1),
       legend.title = element_blank(),
-      legend.text = element_text(size=10),
-      legend.background = element_rect(fill=alpha("white",0),colour ="white"),
-      title = element_text(size=12))
+      legend.text = element_text(size=15),
+      legend.background = element_rect(fill="white",colour ="white"),
+      title = element_text(size=14))
+
+```
+
+... and for Andrew Baker's sake, we can also rotate the y-axis label (remember to rename your code chunk!)
+
+```{r example_rot, fig.height=6, fig.width=6, fig.align='center', dev='svg', echo=FALSE, warning=FALSE, message = FALSE}
+ggplot(data = cars, aes(x = dist, y = speed)) +
+  geom_point(pch = 21, fill="light grey", color = "white", size = 5) +
+  geom_smooth(aes(color = "#BF3984"), method="lm", se = TRUE, fill="#BF3984", lwd=2) +
+  scale_color_manual(values = c("#BF3984"), labels = "Linear fit") +
+  xlab("Distance") + ylab("Speed") + ggtitle("Need for speed")+
+  #theme_bw() +
+  theme_ipsum_rc() + #comment this out if you don't have `hrbrthemes` installed
+  theme(plot.margin=unit(c(1,1,1.5,1.2),"cm"),
+      panel.grid.major.x = element_blank(), #Eliminate grid (comment these out if you want a grid)
+      panel.grid.minor.x = element_blank(),
+      panel.grid.major.y = element_blank(),
+      panel.grid.minor.y = element_blank(),
+      axis.line = element_line(colour = "dark grey"))+
+  theme(axis.title.x = element_text(size=16),
+      axis.text.x = element_blank(),
+      axis.title.y = element_text(size=16, angle=0), #You can rotate the title with angle
+      axis.text.y = element_blank(),legend.position=c(0.8,0.1),
+      legend.title = element_blank(),
+      legend.text = element_text(size=15),
+      legend.background = element_rect(fill="white",colour ="white"),
+      title = element_text(size=14))
 
 ```
 
 ---
 
-# Come to the dark [HTML] side...
+# Share HTML files
 
-If you want to see how this would look as HTML, just change your YAML (i.e. the header of this document, between --- and ---) for the following:
-
-```
----
-title: "RMarkdown Template" # You can put the title of your document here
-author: 
-  - Nina West  # You can include names here
-  - Trixie Mattel
-  - Chi Chi Devayne
-date: "August 16th, 2021"
-output: 
-  html_document:
-    css: style.css 
-    toc: no
----
-```
-
-I've included a separate [R markdown file](https://raw.githubusercontent.com/maibennett/website_github/master/exampleSite/content/files/Rmarkdown_template.Rmd) with this^[Note that if you want to use CSS styles, you'll need to include the [style.css](https://raw.githubusercontent.com/maibennett/website_github/master/exampleSite/content/files/style.css) file in the same directory as your .Rmd file], that you can knit and see how the HTML file looks. I've also uploaded it [here](https://www.magdalenabennett.com/files/Rmarkdown_template.html) just for fun.
+One of the issues with HTML files is that they are not that easy to share. This means that if you send me your knitted .html file, I won't be able to see the same as you! That's why we can just share a single file. An easy way to bypass this is by using Github (this is a whole other world, but an amazing one to get into!).
 
 If you want to share your HTML files, a super quick way is [Grant McDermottt's](https://twitter.com/grant_mcdermott) suggestion using Github:
 
+<center>
 ![Twitter is great](./Rmarkdown/images/host_html.png){width=50%}
+</center>
